[metadata]
name = cleast
version = 0.3.0
author = Owrel
author_email = aureliensimon.contatc@gmail.com
description = CLingo Enriched AST
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/clindoc

[options]
packages = 
    cleast
install_requires =
    clingo>=5.5.0

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2
    

[options.entry_points]
console_scripts =
    clindoc = clindoc:main
