[metadata]
name = cleast
version = 0.1.0
author = Owrel
author_email = aureliensimon.contact@gmail.com
description = CLingo Enriched AST
long_description = file: README.md
long_description_content_type = text/markdown
license = WTFPL
url = https://github.com/owrel/cleast

[options]
packages = 
    cleast
install_requires =
    clingo>=5.5.0